@@ -5,17 +5,21 @@ import java.io.FileReader;
 import java.io.IOException;
 import java.time.LocalDate;
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 import org.springframework.boot.ApplicationArguments;
 import org.springframework.boot.ApplicationRunner;
 import org.springframework.core.annotation.Order;
 import org.springframework.stereotype.Component;
 
-import br.edu.infnet.matheus_mendes_api.model.domain.*;
-import br.edu.infnet.matheus_mendes_api.model.domain.enums.*;
-import br.edu.infnet.matheus_mendes_api.model.domain.produtos.Desinfetante;
-import br.edu.infnet.matheus_mendes_api.model.domain.produtos.Inseticida;
-import br.edu.infnet.matheus_mendes_api.model.domain.produtos.Raticida;
+import br.edu.infnet.matheus_mendes_api.model.domain.Fabricante;
+import br.edu.infnet.matheus_mendes_api.model.domain.enums.Diluente;
+import br.edu.infnet.matheus_mendes_api.model.domain.enums.FormaFarmaceutica;
+import br.edu.infnet.matheus_mendes_api.model.domain.enums.PrincipioAtivo;
+import br.edu.infnet.matheus_mendes_api.model.domain.enums.TipoProduto;
+import br.edu.infnet.matheus_mendes_api.model.domain.produtos.ProdutoQuimicoBase;
+import br.edu.infnet.matheus_mendes_api.model.domain.produtos.ProdutoQuimicoFactory;
 import br.edu.infnet.matheus_mendes_api.model.service.ProdutoQuimicoService;
 
 @Component
@@ -33,6 +37,11 @@ public class ProdutoQuimicoLoader implements ApplicationRunner {
 	@Override
 	public void run(ApplicationArguments args) throws Exception {
 		List<Fabricante> fabricantes = fabricanteLoader.getFabricantes();
+		
+		Map<Integer, String> fabricantesMap = fabricantes.stream()
+				.collect(Collectors.toMap(Fabricante::getId, Fabricante::getNome));
+		ProdutoQuimicoBase.setFabricantesMap(fabricantesMap);
+		 
         carregarProdutosQuimicos("produtos-quimicos-listagem.csv", fabricantes);
         
         System.out.println("=== PRODUTOS QUIMICOS ===");
@@ -49,33 +58,22 @@ public class ProdutoQuimicoLoader implements ApplicationRunner {
 	        String[] campos = linha.split(",");
 	        if (campos.length < 7) continue;
 	        
-	        Fabricante fabricante = i < fabricantes.size()
-	        		? fabricantes.get(i)
-	        		: fabricantes.get(fabricantes.size() - 1);
+	        Integer fabricanteId = i < fabricantes.size()
+	        		? fabricantes.get(i).getId()
+	        		: fabricantes.getLast().getId();
 
-	        String nomeComercial = campos[0].trim();
-	        String registroAnvisa = campos[1].trim();
-	        LocalDate validade = LocalDate.parse(campos[2].trim());
-	        PrincipioAtivo principioAtivo = PrincipioAtivo.valueOf(campos[3].trim());
-	        double concentracao = Double.parseDouble(campos[4].trim());
-	        Diluente diluente = Diluente.valueOf(campos[5].trim());
-	        FormaFarmaceutica forma = FormaFarmaceutica.valueOf(campos[6].trim());
-
-	        ProdutoQuimicoBase produto;
+	        TipoProduto tipoProduto = TipoProduto.valueOf(campos[0].trim());
+	        String nomeComercial = campos[1].trim();
+	        String registroAnvisa = campos[2].trim();
+	        LocalDate validadeRegistro = LocalDate.parse(campos[3].trim());
+	        FormaFarmaceutica formaFarmaceutica = FormaFarmaceutica.valueOf(campos[4].trim());
+	        PrincipioAtivo principioAtivo = PrincipioAtivo.valueOf(campos[5].trim());
+	        double concentracao = Double.parseDouble(campos[6].trim());
+	        Diluente diluente = Diluente.valueOf(campos[7].trim());
 	        
-	        if (i < 2) {
-	            produto = new Inseticida(fabricante, nomeComercial, registroAnvisa,
-	            		validade, forma, principioAtivo, concentracao, diluente);
-	        } 
-	        else if (i < 4) {
-	            produto = new Raticida(fabricante, nomeComercial, registroAnvisa,
-	            		validade, forma, principioAtivo, concentracao, diluente);
-	        } 
-	        else {
-	            produto = new Desinfetante(fabricante, nomeComercial, registroAnvisa,
-	            		validade, forma, principioAtivo, concentracao, diluente);
-	        }
-
+	        var produto = ProdutoQuimicoFactory.criarProdutoPorTipo(fabricanteId, tipoProduto, nomeComercial, registroAnvisa, 
+	        		validadeRegistro, formaFarmaceutica, principioAtivo, concentracao, diluente);
+	        
 	        produtoQuimicoService.incluir(produto);
 	        i++;
 	    }
